# ux-dx

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  SECURITY.md  TODO.md  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yaml  tests.yml
src/: lib.rs  mimic.rs
src/app/: error.rs  mod.rs  runner.rs
src/canvas/: color.rs  gradient_store.rs  image.rs  mod.rs  paint.rs
src/canvas/path/: cache.rs  mod.rs
src/canvas/renderer/: mod.rs  params.rs  void.rs
src/canvas/text/: font.rs  mod.rs
src/core/: alias.rs  atlas_texture.rs  attribute.rs  attribute_buffer.rs  bitmap.rs  buffer.rs  camera.rs  color.rs  context.rs  debug_object_type_info.rs  depth_state.rs  display.rs  enums.rs  euler.rs  fence.rs  fixed.rs  flags.rs  frame_info.rs  framebuffer.rs  gles2_context.rs  gpuinfo.rs  index_buffer.rs  indices.rs  material.rs  matrix.rs  matrix_entry.rs  matrix_stack.rs  mod.rs  offscreen.rs  onscreen.rs  onscreen_template.rs  output.rs  pipeline.rs  poll_fd.rs  primitive.rs  primitives.rs  quaternion.rs  rectangle_map.rs  renderer.rs  snippet.rs  (+16 more)
src/core/path/: mod.rs
src/core/platform/: stage_window.rs
src/engine/: mod.rs
src/engine/d2/: component.rs  director.rs  disposer.rs  entity.rs  mod.rs  speed_adjuster.rs  system.rs
src/ext/: audio.rs  engine.rs  error.rs  event.rs  filesystem.rs  game.rs  gamepad.rs  graphics.rs  keyboard.rs  mod.rs  mouse.rs  prelude.rs  timer.rs  touch.rs  touchpad.rs  window.rs
src/ext/gamepad/: button.rs  device.rs  power.rs  state.rs
src/ext/graphics/: canvas.rs  color.rs  font.rs  image.rs  program.rs  renderer.rs  texture.rs  texture_ref.rs  vertex.rs
src/ext/keyboard/: code.rs  modifier.rs
src/ext/math/: angle.rs  mod.rs  number.rs  region.rs  size.rs  transform.rs  vector.rs
src/ext/mouse/: button.rs  cursor.rs
src/ext/window/: dpi.rs  fullscreen.rs  icon.rs
src/foundation/: application.rs  application_settings.rs  async_application.rs  default_preloader.rs  error.rs  mod.rs  time.rs
src/foundation/asyncwinit/: future.rs  mod.rs
src/foundation/camera/: arcball.rs  first_person.rs  mod.rs
src/foundation/resource/: error.rs  key.rs  mod.rs
src/foundation/scene/: mod.rs  model.rs
src/foundation/vertex/: mod.rs  p2.rs  p2c4.rs  p2t2.rs  p2t2c4.rs  p3.rs  p3c4.rs  p3n3.rs  p3n3c4.rs  p3n3t2.rs  p3n3t2c4.rs  p3t2.rs  p3t2c4.rs
src/gles/: core20.rs  core30.rs  mod.rs  utils.rs
src/gles/ffi/: mod.rs  structloader.rs
src/legacy/: alias.rs  atlas_texture.rs  attribute.rs  context.rs  debug_object_type_info.rs  depth_state.rs  display.rs  enums.rs  euler.rs  fence.rs  fence_closure.rs  flags.rs  frame_closure.rs  frame_info.rs  gles2_context.rs  gtype_object.rs  handle.rs  index_buffer.rs  indices.rs  kms_crtc.rs  material.rs  material_layer.rs  matrix.rs  matrix_entry.rs  matrix_stack.rs  mod.rs  object.rs  onscreen.rs  onscreen_resize_closure.rs  onscreen_template.rs  output.rs  pipeline.rs  poll_fd.rs  primitive.rs  quaternion.rs  renderer.rs  snippet.rs  texture3_d.rs  texture_pixmap_x11.rs  texture_rectangle.rs  (+7 more)
src/platform/: mod.rs
src/platform/core/: alias.rs  atlas.rs  atlas_texture.rs  attribute.rs  attribute_buffer.rs  bitmap.rs  buffer.rs  color.rs  context.rs  debug_object_type_info.rs  depth_state.rs  display.rs  enums.rs  euler.rs  fence.rs  fence_closure.rs  fixed.rs  flags.rs  frame_info.rs  framebuffer.rs  gles2_context.rs  gpuinfo.rs  index_buffer.rs  indices.rs  kms_crtc.rs  matrix.rs  matrix_entry.rs  matrix_stack.rs  mimic.rs  mod.rs  offscreen.rs  onscreen.rs  onscreen_template.rs  output.rs  pipeline.rs  pixel_buffer.rs  poll_fd.rs  primitive.rs  (+16 more)
src/prelude/: mod.rs  renderable.rs
src/pure/: alias.rs  atlas.rs  atlas_texture.rs  attribute.rs  attribute_buffer.rs  bitmap.rs  color.rs  context.rs  debug_object_type_info.rs  depth_state.rs  display.rs  enums.rs  euler.rs  fence.rs  fence_closure.rs  fixed.rs  flags.rs  frame_closure.rs  frame_info.rs  framebuffer.rs  gles2_context.rs  gles2_vtable.rs  gtype_object.rs  handle.rs  index_buffer.rs  indices.rs  kms_crtc.rs  material.rs  material_layer.rs  matrix.rs  matrix_entry.rs  matrix_stack.rs  mod.rs  object.rs  offscreen.rs  onscreen.rs  onscreen_dirty_closure.rs  onscreen_dirty_info.rs  onscreen_resize_closure.rs  onscreen_template.rs  (+27 more)
src/resource/: error.rs  key.rs  mod.rs
src/scene/: light.rs  mod.rs
src/support/: mod.rs
src/ui/: ext.rs  id.rs  mod.rs  nodes.rs  painter.rs  themes.rs
src/utils/: clamp.rs  mod.rs
(+255 files in other folders)
