[package]
name = "ux-dx"
version = "0.1.1"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/ux-dx"
repository = "https://github.com/angular-rust/ux-dx"
documentation = "https://docs.rs/ux-dx"
description = "3D Graphics Primitives for Angular Rust"
keywords = ["canvas", "webgl", "opengl", "opengles", "vulkan"]
categories = ["data-structures"]
edition = "2018"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "dx"

[package.metadata.docs.rs]
features = ["dox"]

[features]
dox = ["ffi/dox", "glib/dox", "glib-sys/dox", "gobject-sys/dox"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2"
bitflags = "1.0"
gobject-sys = "0.10"
glib = "0.10"
glib-sys = "0.10"
ffi = { package = "cogl-sys-rs", version="0.1.4" }

[dev-dependencies]
